topple.abnf
ident = ("_" / ALPHA) *("_" / ALPHA / DIGIT)
string = %x22 *(CHAR / %x00) %x22
literal = 1*DIGIT / string / ident
table = literal *("," *WSP literal)
literal =/ "[" table "]"

index = literal / ident "." ident / ident "[" expr "]"
call = index / (ident / index) "(" table ")"

bit-not = call / "!" call

mult = bit-not / bit_not "*" mult
div = mult / mult "/" div
mod = div / div "%" mod
add = mod / mod "+" add
sub = add / add "-" sub

bit-and = sub / sub "&" bit_and
bit-or = bit_and / bit_and "|" bit_or
bit-xor = bit_or / bit_or "^" bit_xor

shift-left = bit_xor / but_xor "<<" shift_left
shift-right = shift_left / shift_left ">>" shift_right

pop = shift-right / shift_right "--"
push = pop / pop "++" push

expr = assign / def
assign = (ident / index) "=" expr / push
literal =/ "(" expr ")"

def = assign / %s"let" 1*WSP (ident / index / assign)
